Visual changes to fix overflow bug at bottom of page

--- a/styles/Footer/Footer.module.scss
+++ b/styles/Footer/Footer.module.scss
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 8rem;
+  padding: 9rem;
 
   @include mobile {
     padding-left: 10rem;
