--- a/styles/Works/Project.module.scss
+++ b/styles/Works/Project.module.scss
@@ -25,6 +25,7 @@
   width: 32rem;
   height: 20rem;
   border-radius: $border-radius-md;
+  background-color: $white;
   opacity: 0;
   z-index: 0;
 
